--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ test.py
 config.json
 vscode
 config\config.json
-config/config.json
 config.txt
+config\config.json
+.vs
 config/config.json
+*.json
